--- a/package.json
+++ b/package.json
@@ -8,14 +8,17 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "article-parser": "^4.1.1",
     "bcryptjs": "^2.4.3",
     "express": "^4.17.1",
     "express-validator": "^6.3.0",
     "gravatar": "^1.8.0",
     "ip": "^1.1.5",
     "jsonwebtoken": "^8.5.1",
+    "metascraper": "^5.8.12",
     "mongoose": "^5.7.14",
-    "request-ip": "^2.1.3"
+    "request-ip": "^2.1.3",
+    "url-metadata": "^2.4.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.1",
