--- a/package.json
+++ b/package.json
@@ -3,26 +3,27 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon src/app.js"
+    "server": "nodemon src/app.js",
+    "client": "npm start --prefix src/client",
+    "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "article-parser": "^4.1.1",
     "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-validator": "^6.3.0",
     "gravatar": "^1.8.0",
     "ip": "^1.1.5",
     "jsonwebtoken": "^8.5.1",
-    "metascraper": "^5.8.12",
     "mongoose": "^5.7.14",
-    "request-ip": "^2.1.3",
-    "url-metadata": "^2.4.0"
+    "request-ip": "^2.1.3"
   },
   "devDependencies": {
-    "nodemon": "^2.0.1",
-    "concurrently": "^5.0.0"
+    "concurrently": "^5.0.2",
+    "nodemon": "^2.0.1"
   },
   "description": ""
 }
