--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "ip": "^1.1.5",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.7.14",
+    "prop-types": "^15.7.2",
     "request-ip": "^2.1.3"
   },
   "devDependencies": {
